2009-09-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/sidebar.c, src/sidebar.h,
   src/makefile.win32, src/project.c, src/prefs.c, src/treeviews.c,
   src/callbacks.c, src/notebook.c, src/treeviews.h, src/document.c,
   src/main.c, src/symbols.c, src/Makefile.am, src/ui_utils.c,
   po/POTFILES.in, wscript:
   Rename treeviews.[hc] -> sidebar.[hc].
 * data/filetypes.common:
   Remove unused [styling] arguments.
 * src/highlighting.c, data/filetypes.markdown,
   data/filetypes.restructuredtext:
   Remove style defaults from the code - just read them from
   configuration files.
 * src/highlighting.c, HACKING:
   Add apply_style_entries() to simplify implementing styleset_foo().
 * src/highlighting.c:
   Remove filetype keyword defaults from the code - just read them from
   configuration files.
 * src/highlighting.c:
   Add sci_set_keywords() wrapper.


2009-09-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scripts/create_py_tags.py:
   Make the code a bit more pythonic.
 * doc/images/build_menu_commands_dialog.png,
   doc/images/main_window.png:
   Add new images referenced in the documentation.
 * doc/geany.html, doc/geany.txt:
   Several documentation improvements (patch by Lex Trotman, thanks).
 * src/pluginutils.c:
   Fix setting the appropriate page of the combined plugins
   preferences dialog.


2009-09-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c:
   Only focus toolbar goto line entry when pressing keybinding if it's
   visible (patch by Eugene Arshinov, thanks).
 * src/callbacks.c:
   Focus editor after entering a number in the goto line toolbar entry.
 * configure.in:
   Use AC_PATH_PROG instead of which for portability (patch by Erik
   Southworth, thanks).
 * src/plugins.c:
   Show plugins that only implement plugin_configure_single() in the
   multiple-configure dialog as a page with a configure button on it.
   Add padding for multiple-configure dialog.